# C_fdf

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  auteur  main.h
inc/: clicks.h  fdf.h  keys.h  libft.h  main.h  mlx.h
libft/: .gitignore  .travis.yml  AUTHORS  Makefile  README.md  ft_atoi.c  ft_bzero.c  ft_isalnum.c  ft_isalpha.c  ft_iscntrl.c  ft_isdigit.c  ft_isgraph.c  ft_islower.c  ft_isprint.c  ft_ispunct.c  ft_isspace.c  ft_itoa.c  ft_labs.c  ft_lcm.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_sqrt.c  (+38 more)
libft/inc/basics/: booleans.h  chars.h  maths.h  memory.h  numbers.h  strings.h
libft/inc/containers/: list.h
libft/inc/utils/: file.h
libft/src/basics/chars/check/: ft_isalnum.c  ft_isascii.c  ft_isblank.c  ft_iscntrl.c  ft_isprint.c  ft_ispunct.c  (+2 more)
libft/src/basics/maths/: ft_abs.c  ft_factorial.c  ft_gcd.c  ft_lcm.c
libft/src/containers/list/: ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c
libft/src/utils/file/: ft_readline.c
libmlx/: mlx.h
maps/: elem2.fdf  face.fdf  test.fdf
src/: calculate.c  cam.c  clicks.c  debug.c  draw.c  draw_map.c  draw_ui.c  draw_ui_help.c  hooks.c  hooks_init.c  hooks_keyboard.c  hooks_mouse.c  hooks_others.c  image.c  import.c  init.c  keys.c  main.c  map.c  reader.c  render.c  utils.c
tests/: crash_test.sh
track_mem/: graph.sh
(+54 files in other folders)
